2005-01-13  David Reveman  <c99drn@cs.umu.se>

	* src/cairo_xcb_surface.c: Replace struct cairo_surface_backend with
	cairo_surface_backend_t.

2005-01-13  Carl Worth  <cworth@cworth.org>

	* src/cairo_xlib_surface.c: 
	* src/cairo_glitz_surface.c: 
	* src/cairo_ft_font.c: 
	* src/cairo_font.c: 
	* src/cairoint.h: 
	* src/cairo.h: Replace all structure tags to have _ prefix.
	struct cairo_foo -> struct _cairo_foo
	Also, prefer cairo_foo_t over struct _cairo_foo in .c files.

2005-01-12  Carl Worth  <cworth@cworth.org>

	* test/fill_rule.c: Add big_star_path which shows we still have
	fill bugs, (even now that little_star_path is working).

	* src/cairo.c (cairo_sane_state): A NULL cairo_t * is not sane.

	* cairo.pc.in (Libs,Cflags): Add freetype flags so that things
	work with freetype in a non-standard location, (a little extra
	work here since freetype doesn't use pkg-config).

	* TODO: Add several items culled from recent mailing list
	discussions.

	* BUGS: Add bugs on cache locking and surface pattern scaling.

2005-01-11  Keith Packard  <keithp@keithp.com>

	* src/cairo_matrix.c: (_cairo_matrix_compute_scale_factors):
	Scale factors shouldn't include mirroring.

	* src/cairo_wideint.c: (_cairo_int32x32_64_mul),
	(_cairo_int64x64_128_mul):
	* src/cairo_wideint.h:
	int32x32_64_mul and int64x64_128_mul are different from their
	unsigned compatriots

2005-01-11  Øyvind Kolås  <pippin@freedesktop.org>

	* src/cairo_color.c: renamed CAIRO_COLOR_DEFAULT to CAIRO_COLOR_WHITE,
	and made it white again.

2005-01-11  Øyvind Kolås  <pippin@freedesktop.org>

	* src/cairo_xlib_surface.c: (_cairo_xlib_surface_composite): removed
	accidental addition of debug printf in previous commit.

2005-01-11  Øyvind Kolås  <pippin@freedesktop.org>

	* src/cairo_color.c:
	* src/cairo_gstate.c: (_cairo_gstate_init):
	Changed default paint color from opaque white to opaque black.


2005-01-11  Keith Packard  <keithp@keithp.com>

	* cairo.pc.in:
	* configure.in:
	* src/Makefile.am: